# mapcrafter

./: .editorconfig  .gitignore  .lvimrc  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.alpine  README  README.md  TODO  entrypoint.sh
src/: CMakeLists.txt  Makefile  accumulator.h  config.h.in  logging.conf  mapcrafter.cpp  mapcrafter_export.cpp  mapcrafter_markers.cpp  testtextures.cpp  util.cpp  util.h  version.h  version.sh
src/config/: CMakeLists.txt  config.cpp  config.h  extended_ini.cpp  extended_ini.h  ini.cpp  ini.h  iniconfig.cpp  iniconfig.h  mapcrafter_config.cpp  mapcrafter_config.h  mapcrafterconfig.cpp  mapcrafterconfig.h  mapcrafterconfighelper.cpp  mapcrafterconfighelper.h  parser.cpp  parser.h  validation.cpp  validation.h
src/config/sections/: CMakeLists.txt  base.cpp  base.h  map.cpp  map.h  marker.cpp  marker.h  world.cpp  world.h
src/data/: find_images.py
src/data/blocks/: isometric_0_12.txt  isometric_0_16.txt  isometric_1_12.txt  isometric_1_16.txt  isometric_2_12.txt  isometric_2_16.txt  isometric_3_12.txt  isometric_3_16.txt  side_0_12.txt  side_0_16.txt  side_1_12.txt  side_1_16.txt  side_2_12.txt  side_2_16.txt  side_3_12.txt  side_3_16.txt  topdown_0_12.txt  topdown_0_16.txt  topdown_1_12.txt  topdown_1_16.txt  topdown_2_12.txt  topdown_2_16.txt  topdown_3_12.txt  topdown_3_16.txt
src/data/template/: index.html  index.leaflet.html  map.js  map.leaflet.js  markers-generated.js  markers.js  style.css
src/data/template/js/: mapcrafterui.js
src/data/textures/: texture_code.py
src/mapcraftercore/: CMakeLists.txt  config.h.in  util.h  version.h  version.sh
src/mapcraftercore/compat/: CMakeLists.txt  boost.h  nullptr.h  thread.h
src/mapcraftercore/config/: CMakeLists.txt  configparser.cpp  configparser.h  configsection.cpp  configsection.h  iniconfig.cpp  iniconfig.h  loggingconfig.cpp  loggingconfig.h  mapcrafterconfig.cpp  mapcrafterconfig.h  mapcrafterconfighelper.cpp  mapcrafterconfighelper.h  validation.cpp  validation.h  webconfig.cpp  webconfig.h
src/mapcraftercore/config/configsections/: CMakeLists.txt  log.cpp  log.h  map.cpp  map.h  marker.cpp  marker.h  overlay.cpp  overlay.h  world.cpp  world.h
src/mapcraftercore/config/sections/: CMakeLists.txt  base.cpp  base.h  log.cpp  log.h  map.cpp  map.h  marker.cpp  marker.h  world.cpp  world.h
src/mapcraftercore/mc/: CMakeLists.txt  block.cpp  block.h  blockstate.cpp  blockstate.h  chunk.cpp  chunk.h  java.cpp  java.h  nbt.cpp  nbt.h  pos.cpp  pos.h  region.cpp  region.h  world.cpp  world.h  worldcache.cpp  worldcache.h  worldcrop.cpp  worldcrop.h  worldentities.cpp  worldentities.h
src/mapcraftercore/renderer/: CMakeLists.txt  biomes.cpp  biomes.h  blockhandler.cpp  blockhandler.h  blockimages.cpp  blockimages.h  blocktextures.cpp  blocktextures.h  image.cpp  image.h  manager.cpp  manager.h  overlay.cpp  overlay.h  rendermode.cpp  rendermode.h  renderview.cpp  renderview.h  textureimage.cpp  textureimage.h  tilerenderer.cpp  tilerenderer.h  tilerenderworker.cpp  tilerenderworker.h  tileset.cpp  tileset.h
src/mapcraftercore/renderer/image/: CMakeLists.txt  dither.cpp  dither.h  dithering.cpp  dithering.h  palette.cpp  palette.h  quantization.cpp  quantization.h  scaling.cpp  scaling.h
src/mapcraftercore/renderer/overlays/: CMakeLists.txt  areaoverlay.h  heightoverlay.h  lighting.h  lightleveloverlay.cpp  slimeoverlay.h  spawnoverlay.cpp
src/mapcraftercore/renderer/rendermodes/: CMakeLists.txt  areaoverlay.cpp  base.cpp  base.h  cave.cpp  cave.h  heightoverlay.cpp  heightoverlay.h  heighttinting.h  (+13 more)
src/mapcraftercore/thread/: CMakeLists.txt  dispatcher.h  renderwork.h  workermanager.h
src/mapcraftercore/tools/: CMakeLists.txt  nbtdump.cpp
src/mapcraftercore/util/: CMakeLists.txt  color.cpp  color.h  filesystem.cpp  filesystem.h  json.h  logging.cpp  logging.h  math.h  other.cpp  other.h  progress.cpp  progress.h  terminal.cpp  terminal.h  utf8.cpp  utf8.h
src/mc/: CMakeLists.txt  cache.cpp  cache.h  chunk.cpp  chunk.h  nbt.cpp  nbt.h  pos.cpp  pos.h  region.cpp  region.h  world.cpp  world.h  worldcache.cpp  worldcache.h  worldcrop.cpp  worldcrop.h  worldentities.cpp  worldentities.h  worldhelper.cpp  worldhelper.h
src/render/: CMakeLists.txt  biomes.cpp  biomes.h  blockimages.cpp  blockimages.h  blocktextures.cpp  blocktextures.h  config.cpp  config.h  image.cpp  image.h  manager.cpp  manager.h  render.cpp  render.h  textureimage.cpp  textureimage.h  textures.cpp  textures.h  tile.cpp  tile.h  tilerenderer.h  tileset.cpp  tileset.h  worker.cpp  worker.h
src/render/rendermodes/: base.cpp  base.h  cave.cpp  cave.h  lighting.cpp  lighting.h
src/renderer/: CMakeLists.txt  biomes.cpp  biomes.h  blockimages.cpp  blockimages.h  blocktextures.cpp  blocktextures.h  image.cpp  image.h  manager.cpp  manager.h  textureimage.cpp  textureimage.h  tilerenderer.cpp  tilerenderer.h  tilerenderworker.cpp  tilerenderworker.h  tileset.cpp  tileset.h  worker.cpp
src/renderer/rendermodes/: CMakeLists.txt  base.cpp  base.h  cave.cpp  cave.h  lighting.cpp  lighting.h
src/test/: CMakeLists.txt  SlimeTest.java  test_all.cpp  test_blockstate.cpp  test_color.cpp  test_config.cpp  test_image.cpp  test_image_quantization.cpp  test_misc.cpp  test_nbt.cpp  test_pos.cpp  test_region.cpp  test_tile.cpp  test_util.cpp  test_worldcrop.cpp
src/thread/: CMakeLists.txt  dispatcher.h  render_work.h  renderwork.h  work.h  worker_manager.h  workermanager.h
src/thread/impl/: CMakeLists.txt  concurrentqueue.h  multi_threading.cpp  multi_threading.h  multithreading.cpp  multithreading.h  single_thread.cpp  single_thread.h  singlethread.cpp  singlethread.h
src/tools/: CMakeLists.txt  gen_texture_code.py  gen_texture_code.sh  mapcrafter-legacy-textures.py  mapcrafter_markers.cpp  mapcrafter_png-it.py  mapcrafter_textures.py  mapcraftertest.cpp  merge_azeroth.cpp  merge_regions.cpp  nbtdump.cpp  testconfig.cpp  testtextures.cpp  touch_regions.cpp
src/util/: CMakeLists.txt  filesystem.cpp  filesystem.h  math.h  other.cpp  other.h  progress.cpp  progress.h  vscompat.cpp  vscompat.h
(+99 files in other folders)
